<resources>
    <string name="app_name">NMedia</string>
    <string name="maintext">NMedia!</string>
    <string name="message_title">Netology, the University of Internet Professions</string>
    <string name="message_date_time">21st of May 18:36</string>
    <string name="message_text">Hi, this is a new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then there were courses in design, development, analytics and management.We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes ->  <a href="http://netolo.gy/fyb">http://netolo.gy/fyb</a> </string>

    <string name="text_count_likes" translatable="false">10</string>
    <string name="text_count_shared" translatable="false">5</string>
    <string name="text_count_views" translatable="false">5</string>

</resources>
